--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-grid-layout",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,16 +14,34 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-charts": "^7.0.0",
+    "@fontsource/arimo": "^5.0.19",
+    "@react-rxjs/core": "^0.10.7",
+    "@react-rxjs/utils": "^0.9.7",
+    "@reduxjs/toolkit": "^2.2.2",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^9.0.1",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-i18next": "^14.1.0",
+    "react-resizable": "^3.0.5",
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-grid-layout": "^1.3.5",
@@ -34,8 +52,14 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-config-prettier": "latest",
+    "eslint-config-react-app": "latest",
+    "eslint-plugin-prettier": "latest",
+    "jsdom": "latest",
+    "prettier": "stlatestble",
     "sass": "^1.72.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "react-intl": "^6.6.2"
   }
 }
